--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "node-notifier": "^5.1.2",
+    "nodemailer": "^3.1.8",
     "opn": "^4.0.2",
     "request": "^2.81.0"
   }
